www/host/debian-host/files/iptables
# Generated by iptables-save v1.4.12 on Thu May 31 12:21:50 2012
*mangle
:PREROUTING ACCEPT [792:100028]
:INPUT ACCEPT [787:99557]
:FORWARD ACCEPT [0:0]
:OUTPUT ACCEPT [225:26842]
:POSTROUTING ACCEPT [225:26842]
COMMIT
# Completed on Thu May 31 12:21:50 2012
# Generated by iptables-save v1.4.12 on Thu May 31 12:21:50 2012
*nat
:PREROUTING ACCEPT [158:17812]
:INPUT ACCEPT [6:622]
:OUTPUT ACCEPT [42:2881]
:POSTROUTING ACCEPT [42:2881]
COMMIT
# Completed on Thu May 31 12:21:50 2012
# Generated by iptables-save v1.4.12 on Thu May 31 12:21:50 2012
*filter
:INPUT DROP [134:18642]
:FORWARD DROP [0:0]
:OUTPUT DROP [0:0]
-A INPUT -m state --state RELATED,ESTABLISHED -j ACCEPT
-A INPUT -s 128.135.0.0/16 -p tcp -m state --state NEW -j ACCEPT
-A INPUT -s 10.0.0.0/8 -p tcp -m state --state NEW -j ACCEPT
-A INPUT -s 205.208.0.0/17 -p tcp -m state --state NEW -j ACCEPT
-A INPUT -p tcp -m tcp --dport 80 -m limit --limit 25/min --limit-burst 100 -j ACCEPT
-A INPUT -p icmp -m icmp --icmp-type 8 -j ACCEPT
-A INPUT -i lo -j ACCEPT
-A OUTPUT -m state --state NEW -j ACCEPT
-A OUTPUT -m state --state RELATED,ESTABLISHED -j ACCEPT
-A OUTPUT -p icmp -m icmp --icmp-type 0 -j ACCEPT
-A OUTPUT -o lo -j ACCEPT
COMMIT
# Completed on Thu May 31 12:21:50 2012
